# kagoole-twitter

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml  lint.yml
job/: .env.example  Dockerfile  kaggle_api_test.py  main.py  pyproject.toml  tweet_test.py
terraform/: gcp.tf  outputs.tf  providers.tf  terraform.tfvars  tfc-workspace.tf  variables.tf
