[tool.poetry]
name = "job"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.6.6"
python-dotenv = "^1.0.1"
tweepy = "^4.14.0"
google-crc32c = "^1.5.0"
google-cloud-secret-manager = "^2.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
